expose openapi schema
